# metagenome_simulator

./: .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md
include/: metagenome_simulator.h  metagenome_simulator_config.h.in  metamrsim.h  metamrsim_config.h.in
src/: CMakeLists.txt  metagenome_simulator.cpp  metamrsim.cpp
test/: test_generate_training.cpp
